k8s/updb.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: updb
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: updb
        tier: database
    spec:
      containers:
      - name: updb
        image: andrewstuart/updb:5
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 200Mi
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: updb
  namespace: default
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: updb
    tier: database
